--- a/dashboard.html
+++ b/dashboard.html
@@ -1,260 +1,212 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Airtel Promo Dashboard</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: white;
-      overflow-x: hidden;
-    }
-    .background-logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 250px;
-      opacity: 0.07;
-      filter: blur(8px);
-      animation: blink 4s infinite ease-in-out;
-      z-index: 0;
-      pointer-events: none;
-    }
-    @keyframes blink {
-      0%, 100% { opacity: 0.07; }
-      50% { opacity: 0.15; }
-    }
+<!DOCTYPE html>  <html lang="en">  
+<head>  
+  <meta charset="UTF-8" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />  
+  <title>Airtel Promo Dashboard</title>  
+  <style>  
+    body {  
+      margin: 0;  
+      font-family: Arial, sans-serif;  
+      background: white;  
+      overflow-x: hidden;  
+    }  
+    .background-logo {  
+      position: absolute;  
+      top: 50%;  
+      left: 50%;  
+      transform: translate(-50%, -50%);  
+      width: 250px;  
+      opacity: 0.07;  
+      filter: blur(8px);  
+      animation: blink 4s infinite ease-in-out;  
+      z-index: 0;  
+      pointer-events: none;  
+    }  
+    @keyframes blink {  
+      0%, 100% { opacity: 0.07; }  
+      50% { opacity: 0.15; }  
+    }  .content {  
+  position: relative;  
+  z-index: 1;  
+}  
 
-    .content {
-      position: relative;
-      z-index: 1;
-    }
+.header {  
+  background-color: #d90000;  
+  color: white;  
+  padding: 15px;  
+  display: flex;  
+  justify-content: space-between;  
+  align-items: center;  
+}  
 
-    .header {
-      background-color: #d90000;
-      color: white;
-      padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+.main-card {  
+  background: rgba(255, 255, 255, 0.9);  
+  margin: -20px 10px 10px;  
+  border-radius: 15px;  
+  box-shadow: 0 0 10px #ccc;  
+  padding: 20px;  
+  backdrop-filter: blur(10px);  
+}  
 
-    .main-card {
-      background: rgba(255, 255, 255, 0.9);
-      margin: -20px 10px 10px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px #ccc;
-      padding: 20px;
-      backdrop-filter: blur(10px);
-    }
+.user-info {  
+  font-weight: bold;  
+  font-size: 16px;  
+}  
 
-    .user-info {
-      font-weight: bold;
-      font-size: 16px;
-    }
+.balance {  
+  font-size: 20px;  
+  margin-top: 10px;  
+}  
 
-    .balance {
-      font-size: 20px;
-      margin-top: 10px;
-    }
+.balance .eye {  
+  color: red;  
+  cursor: pointer;  
+  margin-left: 5px;  
+}  
 
-    .balance .eye {
-      color: red;
-      cursor: pointer;
-      margin-left: 5px;
-    }
+.buttons-row {  
+  display: flex;  
+  justify-content: space-around;  
+  margin-top: 15px;  
+}  
 
-    .buttons-row {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 15px;
-    }
+.btn {  
+  background-color: #ffe5e5;  
+  border: 1px solid #ffcccc;  
+  color: #d90000;  
+  border-radius: 10px;  
+  padding: 10px;  
+  flex: 1;  
+  margin: 0 5px;  
+  text-align: center;  
+  font-size: 14px;  
+  cursor: pointer;  
+}  
 
-    .btn {
-      background-color: #ffe5e5;
-      border: 1px solid #ffcccc;
-      color: #d90000;
-      border-radius: 10px;
-      padding: 10px;
-      flex: 1;
-      margin: 0 5px;
-      text-align: center;
-      font-size: 14px;
-      cursor: pointer;
-    }
+.banner {  
+  margin: 10px auto;  
+  border-radius: 10px;  
+  width: 95%;  
+  display: none;  
+}  
 
-    .banner {
-      margin: 10px auto;
-      border-radius: 10px;
-      width: 95%;
-      display: none;
-    }
+.section {  
+  background: white;  
+  border-radius: 10px;  
+  margin: 10px;  
+  padding: 10px;  
+}  
 
-    .section {
-      background: white;
-      border-radius: 10px;
-      margin: 10px;
-      padding: 10px;
-    }
+.grid {  
+  display: grid;  
+  grid-template-columns: repeat(4, 1fr);  
+  gap: 10px;  
+  text-align: center;  
+  font-size: 12px;  
+}  
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-      text-align: center;
-      font-size: 12px;
-    }
+.grid div {  
+  padding: 10px;  
+  cursor: pointer;  
+  background: #f8f8f8;  
+  border-radius: 10px;  
+}  
 
-    .grid div {
-      padding: 10px;
-      cursor: pointer;
-      background: #f8f8f8;
-      border-radius: 10px;
-    }
+.bottom-nav {  
+  position: fixed;  
+  bottom: 0;  
+  left: 0;  
+  right: 0;  
+  background: white;  
+  border-top: 1px solid #ddd;  
+  display: flex;  
+  justify-content: space-around;  
+  padding: 10px 0;  
+  font-size: 12px;  
+  z-index: 10;  
+}
 
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: white;
-      border-top: 1px solid #ddd;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      font-size: 12px;
-      z-index: 10;
-    }
+  </style>  
+</head>  
+<body>  
+  <!-- Blurred Background Logo -->  
+  <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />    <div class="content">  
+    <!-- Header -->  
+    <div class="header">  
+      <div><b>Airtel Promo</b></div>  
+      <div><img src="bell.png" alt="Bell" width="20" /></div>  
+    </div>  <!-- Main Card -->  
+<div class="main-card">  
+  <div class="user-info" id="userName">Loading...</div>  
+  <div id="userNumber">00000000000</div>  
+  <div class="balance">  
+    Account Balance: <span id="userBalance">₦0.00</span>  
+    <span class="eye" onclick="toggleBalance()">👁️</span>  
+  </div>  
+  <div class="buttons-row">  
+    <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>  
+    <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>  
+  </div>  
+</div>  
 
-    #adOverlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: black;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 9999;
-    }
+<!-- Promo & Update Banners -->  
+<img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />  
+<img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />  
 
-    #adOverlay video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
-</head>
-<body>
-  <!-- Ad Video Overlay -->
-  <div id="adOverlay">
-    <video id="adVideo" autoplay muted>
-      <source src="login-ad.mp4" type="video/mp4" />
-      Your browser does not support the video tag.
-    </video>
-  </div>
+<!-- Services Grid -->  
+<div class="section">  
+  <b>Transfer & Cashout</b>  
+  <div class="grid">  
+    <div onclick="location.href='transfer.html'">Transfer Money</div>  
+    <div onclick="location.href='add-money.html'">Add Money</div>  
+    <div onclick="location.href='withdraw.html'">Withdraw Cash</div>  
+    <div onclick="location.href='services.html'">More Services</div>  
+  </div>  
+</div>  
 
-  <!-- Blurred Background Logo -->
-  <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />
+<div class="section">  
+  <b>Recharge & Bill Payments</b>  
+  <div class="grid">  
+    <div onclick="location.href='airtime.html'">Airtime</div>  
+    <div onclick="location.href='bundle.html'">Buy Bundle</div>  
+    <div onclick="location.href='bills.html'">Pay Bills</div>  
+    <div onclick="location.href='electricity.html'">Electricity</div>  
+  </div>  
+</div>
 
-  <div class="content" id="mainContent" style="display: none;">
-    <!-- Header -->
-    <div class="header">
-      <div><b>Airtel Promo</b></div>
-      <div><img src="bell.png" alt="Bell" width="20" /></div>
-    </div>
-
-    <!-- Main Card -->
-    <div class="main-card">
-      <div class="user-info" id="userName">Loading...</div>
-      <div id="userNumber">00000000000</div>
-      <div class="balance">
-        Account Balance: <span id="userBalance">₦0.00</span>
-        <span class="eye" onclick="toggleBalance()">👁️</span>
-      </div>
-      <div class="buttons-row">
-        <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>
-        <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>
-      </div>
-    </div>
-
-    <!-- Promo & Update Banners -->
-    <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
-    <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
-
-    <!-- Services Grid -->
-    <div class="section">
-      <b>Transfer & Cashout</b>
-      <div class="grid">
-        <div onclick="location.href='transfer.html'">Transfer Money</div>
-        <div onclick="location.href='add-money.html'">Add Money</div>
-        <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
-        <div onclick="location.href='services.html'">More Services</div>
-      </div>
-    </div>
-
-    <div class="section">
-      <b>Recharge & Bill Payments</b>
-      <div class="grid">
-        <div onclick="location.href='airtime.html'">Airtime</div>
-        <div onclick="location.href='bundle.html'">Buy Bundle</div>
-        <div onclick="location.href='bills.html'">Pay Bills</div>
-        <div onclick="location.href='electricity.html'">Electricity</div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Bottom Navigation -->
-  <div class="bottom-nav">
-    <div onclick="location.href='dashboard.html'">🏠 Home</div>
-    <div onclick="location.href='scan.html'">📷 Scan</div>
-    <div onclick="location.href='history.html'">📄 History</div>
-    <div onclick="location.href='more.html'">☰ More</div>
-  </div>
-
-  <script>
-    const user = JSON.parse(localStorage.getItem('user')) || {};
-    const balanceElement = document.getElementById('userBalance');
-    let isHidden = false;
-
-    document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
-    document.getElementById('userNumber').innerText = user.phone || '08000000000';
-    const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
-    balanceElement.innerText = balanceValue;
-
-    function toggleBalance() {
-      isHidden = !isHidden;
-      balanceElement.innerText = isHidden ? '••••••••' : balanceValue;
-    }
-
-    const updateBanner = document.getElementById('updateBanner');
-    const promoBanner = document.getElementById('promoBanner');
-
-    function cycleBanners() {
-      updateBanner.style.display = 'block';
-      promoBanner.style.display = 'none';
-      setTimeout(() => {
-        updateBanner.style.display = 'none';
-        promoBanner.style.display = 'block';
-        setTimeout(cycleBanners, 10000);
-      }, 5000);
-    }
-
-    cycleBanners();
-
-    // Ad logic
-    const adOverlay = document.getElementById('adOverlay');
-    const adVideo = document.getElementById('adVideo');
-    const mainContent = document.getElementById('mainContent');
-
-    adVideo.volume = 0.1; // Low volume
-
-    setTimeout(() => {
-      adOverlay.style.display = 'none';
-      mainContent.style.display = 'block';
-    }, 10000); // Skip after 10 seconds
-  </script>
-</body>
-                                                     </html>
+  </div>    <!-- Bottom Navigation -->    <div class="bottom-nav">  
+    <div onclick="location.href='dashboard.html'">🏠 Home</div>  
+    <div onclick="location.href='scan.html'">📷 Scan</div>  
+    <div onclick="location.href='history.html'">📄 History</div>  
+    <div onclick="location.href='more.html'">☰ More</div>  
+  </div>    <script>  
+    const user = JSON.parse(localStorage.getItem('user')) || {};  
+    const balanceElement = document.getElementById('userBalance');  
+    let isHidden = false;  
+  
+    document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();  
+    document.getElementById('userNumber').innerText = user.phone || '08000000000';  
+    const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';  
+    balanceElement.innerText = balanceValue;  
+  
+    function toggleBalance() {  
+      isHidden = !isHidden;  
+      balanceElement.innerText = isHidden ? '••••••••' : balanceValue;  
+    }  
+  
+    const updateBanner = document.getElementById('updateBanner');  
+    const promoBanner = document.getElementById('promoBanner');  
+  
+    function cycleBanners() {  
+      updateBanner.style.display = 'block';  
+      promoBanner.style.display = 'none';  
+      setTimeout(() => {  
+        updateBanner.style.display = 'none';  
+        promoBanner.style.display = 'block';  
+        setTimeout(cycleBanners, 10000);  
+      }, 5000);  
+    }  
+  
+    cycleBanners();  
+  </script>  </body>  
+</html>
